# MVRtoKuma

./: .gitignore  CHANGELOG.md  README.md  discovered_devices.mvr  licenserc.toml  main.py  main.spec  merged_with_network.mvr  notes.txt  ops  packaging.spec  pyproject.toml  requirements.txt  run.py  run.spec  test.mvr  test.py  version
.github/workflows/: create_arm.yml  generate.yml
tui/: add_monitors_screen.css  app.css  app.py  artnet.py  artnet_screen.css  config.json  config_screen.css  confirm_screen.css  create_mvr.py  delete_screen.css  fixture.py  merge_mvr.py  messages.py  mvr_merge_screen.css  mvr_screen.css  network.py  quit_screen.css  read_mvr.py  screens.py
