[project]
name = "uptime-kume-mvr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymvr>=1.0.4",
    "textual>=6.2.1",
    "textual-fspicker>=0.6.0",
    "uptime-kuma-api>=1.2.1",
]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]
